assets/scss/zerotohero.scss
/* ... */
.l2-zh .leveloutside,
.l2-zh [data-level="outside"],
.l2-zh [data-hover-level="outside"]:hover,
.l2-zh [data-hover-level="outside"].saved,
.l2-zh
  .show-level-7
  [data-hover-level="outside"].sticky:not(.seen):not(.common) {
  color: $primary-color !important;
}

.l2-zh .bg-level1,
.l2-zh [data-bg-level="1"] {
  background-color: $color-hsk-1 !important;
  color: white !important;
}

.l2-zh .bg-level2,
.l2-zh [data-bg-level="2"] {
  background-color: $color-hsk-2 !important;
  color: white !important;
}

.l2-zh .bg-level3,
.l2-zh [data-bg-level="3"] {
  background-color: $color-hsk-3 !important;
  color: white !important;
}

.l2-zh .bg-level4,
.l2-zh [data-bg-level="4"] {
  background-color: $color-hsk-4 !important;
  color: white !important;
}

.l2-zh .bg-level5,
.l2-zh [data-bg-level="5"] {
  background-color: $color-hsk-5 !important;
  color: white !important;
}

.l2-zh .bg-level6,
.l2-zh [data-bg-level="6"] {
  background-color: $color-hsk-6 !important;
  color: white !important;
}

.l2-zh .bg-level7-9,
.l2-zh [data-bg-level="7-9"] {
  background-color: $color-c2 !important;
  color: white !important;
}

.l2-zh .bg-leveloutside,
.l2-zh [data-bg-level="outside"] {
  background-color: $primary-color !important;
  color: white !important;
}

.logo-small {
  max-width: 6rem;
  max-height: 3rem;
}

.highlight {
  font-weight: bold;
}

ul.collapsed li:nth-child(n + 5) {
  display: none;
}

ul.collapse-4.collapsed li:nth-child(-n + 4) {
  display: inherit;
}

ul.collapse-5.collapsed li:nth-child(-n + 5) {
  display: inherit;
}

ul.collapse-6.collapsed li:nth-child(-n + 6) {
  display: inherit;
}

ul.collapse-7.collapsed li:nth-child(-n + 7) {
  display: inherit;
}

ul.collapse-8.collapsed li:nth-child(-n + 8) {
  display: inherit;
}

ul.collapse-9.collapsed li:nth-child(-n + 9) {
  display: inherit;
}

ul.collapse-10.collapsed li:nth-child(-n + 10) {
  display: inherit !important;
}

.booklist {
  list-style: none;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
}

.booklist-item {
  flex: 1;
  min-width: 10rem;
  margin: 1rem;
  border-radius: 0.3rem;
}

.booklist-item-thumb {
  width: 5rem;
  height: calc(5rem * 1.33);
  display: inline-block;
}

.big-word {
  font-size: 3rem;
  font-weight: bold;
}

#zerotohero:not(.show-simplified) .simplified,
#zerotohero:not(.show-traditional) .traditional {
  display: none;
}

.zerotohero-zoom-0 {
  .use-zoom {
    // No change
  }
}

.zerotohero-zoom-1 {
  .use-zoom {
    font-size: calc(1rem * 1.25);
  }
}

.zerotohero-zoom-2 {
  .use-zoom {
    font-size: calc(1rem * 1.25 * 1.25);
  }
}
.zerotohero-zoom-3 {
  .use-zoom {
    font-size: calc(1rem * 1.25 * 1.25 * 1.25);
  }
}
.zerotohero-zoom-4 {
  .use-zoom {
    font-size: calc(1rem * 1.25 * 1.25 * 1.25 * 1.25);
  }
}
.zerotohero-zoom-5 {
  .use-zoom {
    font-size: calc(1rem * 1.25 * 1.25 * 1.25 * 1.25 * 1.25);
  }
}
.zerotohero-zoom-6 {
  .use-zoom {
    font-size: calc(1rem * 1.25 * 1.25 * 1.25 * 1.25 * 1.25 * 1.25);
  }
}
.zerotohero-zoom-7 {
  .use-zoom {
    font-size: calc(1rem * 1.25 * 1.25 * 1.25 * 1.25 * 1.25 * 1.25 * 1.25);
  }
}

.word-block-unknown {
  display: inline-block;
  span {
    display: block;
  }
  .word-block-definition-placeholder {
    line-height: 1;
    opacity: 0.7;
    margin: 0 0.1rem 0 0.1rem;
    font-size: 0.8rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: none;
  }
}
.show-definition .word-block-unknown .word-block-definition-placeholder {
  display: block;
}


.text-primary {
  color: $primary-color !important;
}

.zerotohero-dark {
  .text-contrast {
    color: $text-color-on-dark;
  }
}

.zerotohero-light {
  .text-contrast {
    color: $text-color-on-light;
  }
}

.bg-primary,
a.bg-primary:hover,
button.bg-primary:hover,
a.bg-primary:focus,
button.bg-primary:focus {
  background-color: $primary-color !important;
}

.border-dashed {
  border-style: dashed !important;
  border-width: 2px !important;
}

.border-primary {
  border-color: $primary-color !important;
}

.bg-gray {
  background-color: #efefef !important;
}

.border-gray {
  border-color: #efefef !important;
}

.btn-xs {
  font-size: 0.8rem;
  padding: 0.1rem 0.4rem;
}

.btn-small {
  color: #a7a7a7;
  font-size: 0.8rem;
  padding: 0.1rem 0.4rem;
  border-radius: 0.2rem;
  background-color: #f3f3f3;
  position: relative;
  display: inline-block;
  border: none;
}

.btn-small:hover {
  text-decoration: none;
}

.btn-small img {
  height: 0.9rem;
  margin-bottom: 0.2rem;
  filter: opacity(0.3);
}

.btn-primary {
  background-color: $primary-color;
  border-color: $primary-color;
  color: white;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:not(:disabled):not(.disabled):active {
  background-color: $primary-color-dark;
  border-color: $primary-color-dark;
  color: white;
}

.btn-gray {
  background: #efefef;
  color: #8e8e8e;
}

.btn-gray:hover,
.btn-gray:focus .btn-gray:not(:disabled):not(.disabled):active {
  text-decoration: none;
  background: #d8d8d8;
  color: #8e8e8e;
}

.btn-ghost-dark-outline {
  color: hsla(0deg 0% 100% / 50%);
  border: 2px solid #666;
  background: none;
  &:hover {
    background-color: hsla(0deg 0% 100% / 70%);
    border: 2px solid #aaa;
  }
}

.btn-ghost-dark,
.select-ghost-dark {
  background-color: hsla(0deg 0% 100% / 42%);
  border: none;
  color: black;
  &:hover,
  &:active {
    background-color: hsla(0deg 0% 100% / 70%);
    color: black;
  }
}

.select-ghost-dark {
  height: 40px;
}

.btn-ghost-dark-no-bg {
  background: none;
  color: hsla(0deg 0% 100% / 60%);
  border: none;
  &:hover,
  &:active {
    color: white;
    background-color: hsla(0deg 0% 100% / 15%);
  }
}

.btn-medium {
  display: inline-block;
  border: none;
  padding: 0.2rem 0.5rem;
  border-radius: 0.3rem;
}
/* ... */

